--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,22 @@
 ---
 // import { Image } from "@astrojs/image/components";
-import BaseLayout from "../layouts/BaseLayout.astro";
-import MarketItem from "../components/MarketItem.astro";
-import { generateItemForId } from "../utils.js";
+import BaseLayout from '../layouts/BaseLayout.astro';
+import MarketList from '../components/MarketList.astro';
+// import { generateItemForId } from "../utils.js";
 
-// https://etherscan.io/nft/0x12423f35fa1e2969c73586788090f24ba72a6a1e/{id}
+// import rankedNfts from "./rarest/first.json";
+
 // export async function getStaticPaths() {
-//   return [{ props: { nfts } }];
+//   const rankedNfts = (await import("./rarest/first.json")).default;
+//   // console.log(res);
+//   return [{ props: { nfts: rankedNfts } }];
 // }
 
-const nfts = Array(100)
-  .fill(0)
-  .map((_, idx) => generateItemForId(idx + 1))
-  .sort((a, b) => a.rank - b.rank);
+// const nfts = await fetch('/rarest/first.json').then((res) => res.json());
+// const res = (await import("./rarest/first.json")).default;
+// console.log(res);
 
-// const items = getFakeItems();
+// const nfts = (await import("./rarest/first.json")).default.slice(0, 50);
 ---
 
 <BaseLayout>
@@ -30,7 +32,7 @@ const nfts = Array(100)
       <div
         class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 xl:grid-cols-6 gap-4"
       >
-        {nfts.map((nft) => <MarketItem nft={nft} />)}
+        <MarketList />
       </div>
     </section>
   </div>
